--- a/MarcRecordServiceApp/MarcRecordServiceApp/app.config
+++ b/MarcRecordServiceApp/MarcRecordServiceApp/app.config
@@ -26,12 +26,6 @@
    <setting name="RbdMarcRecordMaxProducts" serializeAs="String">
     <value>1000000</value>
    </setting>
-   <setting name="MarcFilesWorkingDirectory" serializeAs="String">
-    <value>C:\Clients\Rittenhouse\MarcProject\MarcRecordServiceApp\Working</value>
-   </setting>
-   <setting name="SiteSubDirectory" serializeAs="String">
-    <value>https://dev21.rittenhouse.com/rbd/</value>
-   </setting>
    <setting name="DefaultFromAddress" serializeAs="String">
     <value>rbd@rittenhouse.com</value>
    </setting>
@@ -41,6 +35,18 @@
    <setting name="MarcRecordBatchSize" serializeAs="String">
     <value>10000</value>
    </setting>
+   <setting name="R2DatabaseName" serializeAs="String">
+    <value>Dev2_RIT001</value>
+   </setting>
+   <setting name="MarcFilesWorkingDirectory" serializeAs="String">
+    <value>E:\Rittenhouse\MarcProject\MarcRecordServiceApp\Working</value>
+   </setting>
+   <setting name="SiteSubDirectory" serializeAs="String">
+    <value>https://dev01.rittenhouse.com/Rbd/</value>
+   </setting>
+   <setting name="R2WebSite" serializeAs="String">
+    <value>http://dev.r2library.com/Resource/Title/</value>
+   </setting>
   </MarcRecordServiceApp.Settings>
 	</applicationSettings>
 	<startup>
@@ -48,7 +54,7 @@
 	</startup>
 	<log4net debug="false">
 		<appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
-			<param name="File" value="F:\Clients\Rittenhouse\MarcProject\Log4Net\MarcRecord.log" />
+			<param name="File" value="E:\Rittenhouse\Logs\MarcRecordServiceApp.log" />
 			<param name="AppendToFile" value="false" />
 			<rollingStyle value="Size" />
 			<maxSizeRollBackups value="100" />
@@ -71,7 +77,7 @@
   <system.net>
     <mailSettings>
       <smtp from="r2-support@technotects.com">
-        <network host="smtp.1and1.com" port="587" userName="r2v2@technotects.net" password="R2V22013" defaultCredentials="false" />
+        <network host="smtp.mandrillapp.com" port="587" userName="r2smtpgateway" password="dFfBt0dVxHB6qd-q86OTTw"  defaultCredentials="false" />
       </smtp>
     </mailSettings>
   </system.net>
