Made changes to add R2Library specific Marc Records.

--- a/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
+++ b/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
@@ -18,7 +18,7 @@
     <add key="webpages:Version" value="1.0.0.0"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="MarcRecordsWorkingDirectory" value="D:\Clients\Rittenhouse\MarcProject\MarcRecordsWorking"/>
+    <add key="MarcRecordsWorkingDirectory" value="F:\Clients\Rittenhouse\MarcProject\MarcRecordsWorking"/>
 
     <add key="R2LibraryUrl" value="http://r2library.com/Resource/Title/"/>
     <add key="RittenhouseUrl" value="https://www.rittenhouse.com/Rbd/Products/Book.aspx?sku="/>
@@ -28,7 +28,7 @@
 
   <log4net>
     <appender name="baseLogger" type="log4net.Appender.RollingFileAppender">
-      <file value="D:\Clients\Rittenhouse\Log4Net\MarcRecordServiceSite.log" />
+      <file value="F:\Clients\Rittenhouse\MarcProject\Log4Net\MarcRecordServiceSite.log" />
       <appendToFile value="false" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="10" />
@@ -45,8 +45,8 @@
     </appender>
     <appender name="SmtpAppender" type="log4net.Appender.SmtpAppender">
       <threshold value="ERROR" />
-      <to value="KenHaberle@technotects.com, scottscheider@technotects.com" />
-      <subject value="MARC Records ERROR - DEV" />
+      <to value="KenHaberle@technotects.com" />
+      <subject value="MARC Records ERROR - Local" />
       <from value="r2-support@technotects.com" />
       <smtpHost value="smtp.technotects.com" />
       <Authentication value="Basic"/>
@@ -107,7 +107,7 @@
   <system.net>
     <mailSettings>
       <smtp>
-        <network host="smtp.technotects.com" port="25" userName="r2-support--technotects.com" password="Techno2011" defaultCredentials="false" />
+        <network host="smtp.mandrillapp.com" port="587" userName="r2smtpgateway" password="dFfBt0dVxHB6qd-q86OTTw"  defaultCredentials="false" />
       </smtp>
     </mailSettings>
   </system.net>
