--- a/MarcRecordServiceSite/MarcRecordServiceSite/MarcRecordServiceSite.csproj
+++ b/MarcRecordServiceSite/MarcRecordServiceSite/MarcRecordServiceSite.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -52,10 +53,13 @@
     <Reference Include="log4net">
       <HintPath>..\..\References\log4net\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="MARCEngine, Version=1.2.18.0, Culture=neutral, PublicKeyToken=d91fa60ef56a91bc, processorArchitecture=MSIL">
+    <Reference Include="MARCEngine, Version=1.5.26.0, Culture=neutral, PublicKeyToken=d91fa60ef56a91bc, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\References\MarcEdit\5.6-64bit\MARCEngine.dll</HintPath>
-      <Private>True</Private>
+    </Reference>
+    <Reference Include="mengine60, Version=2.3.37.0, Culture=neutral, PublicKeyToken=c1bb55e8c070effb, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\References\MarcEdit\5.6-64bit\mengine60.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -131,11 +135,12 @@
   <ItemGroup>
     <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\MarcRecordsController.cs" />
+    <Compile Include="Controllers\PingController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\MarcRecordService.cs" />
-    <Compile Include="Infrastructure\NHibernate\Entities\DailyMarcRecordFile.cs" />
+    <Compile Include="Infrastructure\NHibernate\Entities\WebMarcRecordFile.cs" />
     <Compile Include="Infrastructure\NHibernate\Entities\MarcRecord.cs" />
     <Compile Include="Infrastructure\NHibernate\Entities\MarcRecordFile.cs" />
     <Compile Include="Infrastructure\NHibernate\Entities\MarcRecordProvider.cs" />
@@ -145,10 +150,12 @@
     <Compile Include="Infrastructure\NHibernate\Mappings\MarcRecordMap.cs" />
     <Compile Include="Infrastructure\NHibernate\Mappings\MarcRecordProviderTypeMap.cs" />
     <Compile Include="Infrastructure\NHibernate\Queries\MarcRecordQueries.cs" />
+    <Compile Include="Infrastructure\RequestInformation.cs" />
     <Compile Include="Models\FtpService.cs" />
     <Compile Include="Models\IsbnsNotFound.cs" />
     <Compile Include="Models\JsonMarcRecordRequest.cs" />
     <Compile Include="Models\MarcRecordRequestItem.cs" />
+    <Compile Include="Models\PingData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -235,6 +242,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\MarcRecords\Error.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Ping\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
