--- a/trunk/MarcRecordServiceApp/MarcRecordServiceApp/Settings.settings
+++ b/trunk/MarcRecordServiceApp/MarcRecordServiceApp/Settings.settings
@@ -45,5 +45,8 @@
     <Setting Name="R2WebSite" Type="System.String" Scope="Application">
       <Value Profile="(Default)">http://dev.r2library.com/Resource/Title/</Value>
     </Setting>
+    <Setting Name="OclcGetRecordsOlderThanDays" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">7</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
