--- a/trunk/MarcRecordServiceApp/MarcRecordServiceApp/app.config
+++ b/trunk/MarcRecordServiceApp/MarcRecordServiceApp/app.config
@@ -47,6 +47,9 @@
    <setting name="R2WebSite" serializeAs="String">
     <value>http://dev.r2library.com/Resource/Title/</value>
    </setting>
+   <setting name="OclcGetRecordsOlderThanDays" serializeAs="String">
+    <value>7</value>
+   </setting>
   </MarcRecordServiceApp.Settings>
 	</applicationSettings>
 	<startup>
