--- a/trunk/MarcRecordServiceSite/MarcRecordServiceSite/MarcRecordServiceSite.csproj
+++ b/trunk/MarcRecordServiceSite/MarcRecordServiceSite/MarcRecordServiceSite.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\DeleteFileAttribute.cs" />
     <Compile Include="Infrastructure\MarcRecordService.cs" />
     <Compile Include="Infrastructure\NHibernate\Entities\WebMarcRecordFile.cs" />
     <Compile Include="Infrastructure\NHibernate\Entities\MarcRecord.cs" />
@@ -245,6 +246,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Ping\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Default\Robots.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
