Updated MarkRecords Project to VS2017, fixed the ping controller, and updated the deployment script to deploy to technoserv02 instead of technoserv04

--- a/MarcRecordServiceApp/MarcRecordServiceApp/app.config
+++ b/MarcRecordServiceApp/MarcRecordServiceApp/app.config
@@ -7,8 +7,9 @@
 		</sectionGroup>
 	</configSections>
 	<connectionStrings>
-  <add name="MarcRecordServiceApp.Settings.RittenhouseMarcDb" connectionString="Server=10.0.0.32;Database=MarcRecords;User ID=sa;Password=Techno2012;Trusted_Connection=False" />
- </connectionStrings>
+  <!--<add name="MarcRecordServiceApp.Settings.RittenhouseMarcDb" connectionString="Server=10.0.0.32;Database=MarcRecords;User ID=sa;Password=Techno2012;Trusted_Connection=False" />-->
+  <add name="MarcRecordServiceApp.Settings.RittenhouseMarcDb" connectionString="Server=10.0.0.45;Database=MarcRecords;User ID=sa;Password=Techno2015;Trusted_Connection=False" />
+  </connectionStrings>
 	<applicationSettings>
 		<MarcRecordServiceApp.Settings>
    <setting name="EmailConfigDirectory" serializeAs="String">
