--- a/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
+++ b/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
@@ -12,7 +12,7 @@
   <connectionStrings>
     <!--<add name="MarcRecordsDbConnection" connectionString="Server=technoserv04\sql2005;Database=MarcRecords;User ID=sa;Password=Techno2008;Trusted_Connection=False" />-->
     <!--<add name="MarcRecordsDbConnection" connectionString="Server=10.0.0.32;Database=MarcRecords;User ID=sa;Password=Techno2012;Trusted_Connection=False" />-->
-    <add name="MarcRecordsDbConnection" connectionString="Server=10.0.0.45;Database=MarcRecords;User ID=sa;Password=Techno2015;Trusted_Connection=False" />
+    <add name="MarcRecordsDbConnection" connectionString="Server=technoserv05;Database=MarcRecords;User ID=sa;Password=Techno2015;Trusted_Connection=False" />
   </connectionStrings>
 
   <appSettings>
