--- a/trunk/MarcRecordServiceApp/MarcRecordServiceApp/MarcRecordServiceApp.csproj
+++ b/trunk/MarcRecordServiceApp/MarcRecordServiceApp/MarcRecordServiceApp.csproj
@@ -57,6 +57,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\References\MarcEdit\5.6-32bit\MARCEngine.dll</HintPath>
     </Reference>
+    <Reference Include="SqlBulkCopy, Version=1.0.0.0, Culture=neutral, PublicKeyToken=51331b1e3402a75f, processorArchitecture=MSIL">
+      <HintPath>..\packages\SqlBulkCopy.1.0.0\lib\net40\SqlBulkCopy.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -108,6 +111,7 @@
     <Compile Include="Core\DataAccess\Factories\Base\EntityFactory.cs" />
     <Compile Include="Core\DataAccess\Factories\Base\FactoryBase.cs" />
     <Compile Include="Core\DataAccess\Factories\CallNumberFactory.cs" />
+    <Compile Include="Core\DataAccess\Factories\MarcFieldParsingFactory.cs" />
     <Compile Include="Core\DataAccess\Factories\MarcRecordsProductFactory.cs" />
     <Compile Include="Core\DataAccess\Factories\R2ProductFactory.cs" />
     <Compile Include="Core\DataAccess\Factories\TaskResultFactory.cs" />
@@ -147,6 +151,7 @@
     <Compile Include="Tasks\MarcRecords\DailyMarcRecordsTask.cs" />
     <Compile Include="Tasks\MarcRecords\MarcRecordsTask.cs" />
     <Compile Include="Tasks\MarcRecords\OclcR2LibraryMarcRecordsTask.cs" />
+    <Compile Include="Tasks\MarcRecords\ParseMarcFieldsTask.cs" />
     <Compile Include="Tasks\MarcRecords\R2LibraryMarcRecordsTask.cs" />
     <Compile Include="Tasks\MarcRecords\RittenhouseOnlyMarcRecordsTask.cs" />
     <Compile Include="Tasks\TaskBase.cs" />
@@ -155,6 +160,7 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="packages.config" />
     <None Include="Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
