--- a/MarcRecordServiceApp/MarcRecordServiceApp/app.config
+++ b/MarcRecordServiceApp/MarcRecordServiceApp/app.config
@@ -8,7 +8,7 @@
 	</configSections>
 	<connectionStrings>
   <!--<add name="MarcRecordServiceApp.Settings.RittenhouseMarcDb" connectionString="Server=10.0.0.32;Database=MarcRecords;User ID=sa;Password=Techno2012;Trusted_Connection=False" />-->
-  <add name="MarcRecordServiceApp.Settings.RittenhouseMarcDb" connectionString="Server=10.0.0.45;Database=MarcRecords;User ID=sa;Password=Techno2015;Trusted_Connection=False" />
+  <add name="MarcRecordServiceApp.Settings.RittenhouseMarcDb" connectionString="Server=technoserv05;Database=MarcRecords;User ID=sa;Password=Techno2015;Trusted_Connection=False" />
   </connectionStrings>
 	<applicationSettings>
 		<MarcRecordServiceApp.Settings>
