--- a/trunk/MarcRecordServiceApp/MarcRecordServiceApp/app.config
+++ b/trunk/MarcRecordServiceApp/MarcRecordServiceApp/app.config
@@ -36,7 +36,7 @@
     <value>1000</value>
    </setting>
    <setting name="R2DatabaseName" serializeAs="String">
-    <value>Dev2_RIT001</value>
+    <value>DEV_RIT001</value>
    </setting>
    <setting name="MarcFilesWorkingDirectory" serializeAs="String">
     <value>E:\Rittenhouse\MarcProject\MarcRecordServiceApp\Working</value>
