--- a/MarcRecordServiceApp/MarcRecordServiceApp/Settings.settings
+++ b/MarcRecordServiceApp/MarcRecordServiceApp/Settings.settings
@@ -5,9 +5,6 @@
     <Setting Name="EmailConfigDirectory" Type="System.String" Scope="Application">
       <Value Profile="(Default)">C:\Clients\Rittenhouse\MarcProject\MarcRecordServiceApp\MarcRecordServiceApp\EmailConfigs</Value>
     </Setting>
-    <Setting Name="DatabaseCommandTimeout" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">60</Value>
-    </Setting>
     <Setting Name="LcMarcRecordMaxProducts" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">20000</Value>
     </Setting>
@@ -22,12 +19,6 @@
     </Setting>
     <Setting Name="DefaultFromAddressName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Rittenhouse Customer Service</Value>
-    </Setting>
-    <Setting Name="MarcRecordBatchSize" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">1000</Value>
-    </Setting>
-    <Setting Name="R2DatabaseName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Dev2_RIT001</Value>
     </Setting>
     <Setting Name="MarcFilesWorkingDirectory" Type="System.String" Scope="Application">
       <Value Profile="(Default)">E:\Rittenhouse\MarcProject\MarcRecordServiceApp\Working</Value>
@@ -47,6 +38,15 @@
   &lt;ConnectionString&gt;Server=technoserv05;Database=MarcRecords;User ID=sa;Password=Techno2015;Trusted_Connection=False&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Server=technoserv05;Database=MarcRecords;User ID=sa;Password=Techno2015;Trusted_Connection=False</Value>
+    </Setting>
+    <Setting Name="DatabaseCommandTimeout" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">600</Value>
+    </Setting>
+    <Setting Name="MarcRecordBatchSize" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">10000</Value>
+    </Setting>
+    <Setting Name="R2DatabaseName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">DEV_RIT001</Value>
     </Setting>
   </Settings>
 </SettingsFile>
