--- a/trunk/MarcRecordServiceApp/MarcRecordServiceApp/app.config
+++ b/trunk/MarcRecordServiceApp/MarcRecordServiceApp/app.config
@@ -12,7 +12,7 @@
 	<applicationSettings>
 		<MarcRecordServiceApp.Settings>
    <setting name="EmailConfigDirectory" serializeAs="String">
-    <value>C:\Clients\Rittenhouse\MarcProject\MarcRecordServiceApp\MarcRecordServiceApp\EmailConfigs</value>
+    <value>.\EmailConfigs</value>
    </setting>
    <setting name="LcMarcRecordMaxProducts" serializeAs="String">
     <value>20000</value>
